@@ -1,6 +1,7 @@
 todoyu core changelog
 
 core 2.3.0 - not released yet
+	* Bugfix: SearchList-input value clearing disabled text-navigation
 	* Bugfix: Fixed bug in the assistNumericInput method
 	* Bugfix: Changed date-format for calendar week to ISO-8601
 	* Changed: Encoding of title in header-template is now optional
